--- a/app/views/static/main.html
+++ b/app/views/static/main.html
@@ -1,9 +1,24 @@
-<h1>ideabox</h1>
-<form class="new-idea">
-<input type="text" class="new-idea-title">
-<input type="text" class="new-idea-body">
-<input type="submit" class="new-idea-submit">
-</form>
-<div class="idea-container">
+<div class="container">
+
+  <header>
+    <h1>ideabox</h1>
+  </header>
+
+  <section class="create-idea">
+    <form class="new-idea">
+      <div class="new-idea-field">
+        <label class="new-idea-label">Idea Title</label>
+        <input type="text" class="new-idea-title new-idea-input" name="idea[title]" placeholder="Idea Title">
+      </div>
+      <div class="new-idea-field">
+        <label class="new-idea-label">Idea Body</label>
+        <input type="text" class="new-idea-body new-idea-input" name="idea[body]" placeholder="Idea Body">
+      </div>
+      <div class="new-idea-messages"></div>
+      <input type="submit" class="new-idea-submit" value="Submit Idea">
+    </form>
+  </section>
+
+  <section class="idea-container"></section>
 
 </div>
