--- a/app/views/static/main.html
+++ b/app/views/static/main.html
@@ -7,12 +7,12 @@
   <section class="create-idea">
     <form class="new-idea">
       <div class="new-idea-field">
-        <label class="new-idea-label">Idea Title</label>
+        <label class="new-idea-label" style="display:none;">Idea Title</label>
         <input type="text" class="new-idea-title new-idea-input" name="idea[title]" placeholder="Idea Title">
       </div>
       <div class="new-idea-field">
-        <label class="new-idea-label">Idea Body</label>
-        <input type="text" class="new-idea-body new-idea-input" name="idea[body]" placeholder="Idea Body">
+        <label class="new-idea-label" style="display:none;">Idea Body</label>
+        <textarea class="new-idea-body new-idea-input" name="idea[body]" placeholder="Idea Body"></textarea>
       </div>
       <div class="new-idea-messages"></div>
       <input type="submit" class="new-idea-submit" value="Submit Idea">
