--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,10 @@
 $form-color: #eaeaea;
 $button-color: #ababab;
 $danger-color: #842322;
+$focus-color: #48919e;
+
+
+// TODO: Refactor and next in SCSS rather than CSS format.
 
 * {
   -webkit-box-sizing: border-box;
@@ -18,35 +22,35 @@ input, textarea {
   color: darken($form-color, 50);
 }
 
-.container {
+.main-content-container {
   margin: auto;
   max-width: 600px;
 }
 
-.new-idea {
+.new-idea-form {
   background-color: $form-color;
   border: 5px solid darken($form-color, 5);
   padding: 1em;
   margin-bottom: 2em;
 }
 
-.new-idea-field {
+.new-idea-form-field {
   margin-bottom: 1em;
 }
 
 .new-idea-label {
-  display:block;
+  display: block;
   color: darken($form-color, 50);
 }
 
-.new-idea-input {
-  background-color: $form-color;
-  border: 2px solid #f0f0f0;
+.new-idea-form-input {
+  background-color: #f0f0f0;
+  border: 8px solid #f0f0f0;
   border-radius: 1px;
   display: block;
   font-size: 1.5em;
   margin: 2px 0;
-  padding: 3px;
+  padding: 5px 5px 5px 10px;
   width: 100%;
 }
 
@@ -54,24 +58,22 @@ input, textarea {
   height: 250px;
 }
 
-input[type="submit"], button {
+button {
   border: 0;
+  font-size: 1em;
   color: white;
   background-color: $button-color;
-  font-size: 0.8em;
   padding: 1em;
   &:hover {
     background-color: lighten($button-color, 10);
   }
-  &:active {
-    background-color: darken($button-color, 10);
+  &:focus {
+    background-color: lighten($button-color, 10);
+    border-color: $focus-color;
   }
-}
-
-.idea {
-  margin-bottom: 1em;
-  padding: 1em;
-  border: 5px solid #EEE;
+  &:active {
+    background-color: lighten($button-color, 10);
+  }
 }
 
 .idea-quality {
@@ -103,13 +105,68 @@ input[type="submit"], button {
   }
 }
 
-#new-idea-errors {
-  margin-bottom: 2em;
-  color: $danger-color;
-  font-weight: bold;
-  min-height: 20px;
+#ideas-list {
+  list-style-type: none;
 }
 
-.error-present {
+#ideas-list > li.idea {
+  min-height: 24px;
+  margin-bottom: 1em;
+  margin-left: -40px;
+  padding: .5em;
+  border: 5px solid #EEE;
+}
+
+#ideas-list > li .list-row-element {
+  height: 100%;
+  // background-color: $focus-color;
+  padding: 0px 10px;
+}
+
+#ideas-list > li.idea .fa-lg {
+  vertical-align: -5%;
+}
+
+#ideas-list span.idea-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+#ideas-list span.idea-title-check,
+#ideas-list span.idea-title-caret {
+  min-width: 20px;
+}
+#ideas-list span.idea-body {
+  display:none;
+}
+
+.new-idea-errors-wrapper {
+  min-height: 25px;
   color: $danger-color;
+  font-weight: bold;
+  margin-bottom: 2em;
+}
+
+#new-idea-errors.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s .4s, opacity .4s linear;
+}
+
+#new-idea-errors {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity .4s linear;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: darken($form-color, 25);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: darken($form-color, 25);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: darken($form-color, 25);
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: darken($form-color, 25);
 }
