--- a/app/views/static/main.html
+++ b/app/views/static/main.html
@@ -18,7 +18,7 @@
   </section>
 
   <section class="ideas-container">
-    <ul id="ideas-list"></ul>
+    <ul id="ideas-list" class="hidden"></ul>
   </section>
 
 </div>
