--- a/app/views/static/main.html
+++ b/app/views/static/main.html
@@ -1,4 +1,4 @@
-<div class="main-content-container">
+<div class="main-content">
 
   <header>
     <h1>ideabox</h1>
@@ -13,12 +13,12 @@
         <textarea class="new-idea-form-input" id="new-idea-body" name="idea[body]" placeholder="idea body"></textarea>
       </div>
       <div class="new-idea-errors-wrapper"><div id="new-idea-errors" class="hidden"></div></div>
-      <button id="new-idea-submit">Submit Idea</button>
+      <button id="new-idea-submit">submit</button>
     </form>
   </section>
 
   <section class="ideas-container">
-    <ul id="ideas-list" class="hidden"></ul>
+    <ul id="ideas-list"></ul>
   </section>
 
 </div>
