--- a/app/views/static/main.html
+++ b/app/views/static/main.html
@@ -1,24 +1,24 @@
 <div class="main-content">
 
   <header>
-    <h1>ideabox</h1>
+    <h1>taskbox</h1>
   </header>
 
-  <section class="new-idea-form-container">
-    <form class="new-idea-form">
-      <div class="new-idea-form-field">
-        <input type="text" class="new-idea-form-input" id="new-idea-title" name="idea[title]" placeholder="idea title">
+  <section class="new-task-form-container">
+    <form class="new-task-form">
+      <div class="new-task-form-field">
+        <input type="text" class="new-task-form-input" id="new-task-title" name="task[title]" placeholder="task title">
       </div>
-      <div class="new-idea-form-field">
-        <textarea class="new-idea-form-input" id="new-idea-body" name="idea[body]" placeholder="idea body"></textarea>
+      <div class="new-task-form-field">
+        <textarea class="new-task-form-input" id="new-task-body" name="task[body]" placeholder="task body"></textarea>
       </div>
-      <div class="new-idea-errors-wrapper"><div id="new-idea-errors" class="hidden"></div></div>
-      <button id="new-idea-submit">submit</button>
+      <div class="new-task-errors-wrapper"><div id="new-task-errors" class="hidden"></div></div>
+      <button id="new-task-submit">submit</button>
     </form>
   </section>
 
-  <section class="ideas-container">
-    <ul id="ideas-list"></ul>
+  <section class="tasks-container">
+    <ul id="tasks-list"></ul>
   </section>
 
 </div>
